// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Delegates Listing With Groups render data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        data-test="newDelegateButton"
        id="newDelegateBtn"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegate.NEW_DELEGATE
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon "
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="delegates.searchDelegateName"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-settings StyledProps--main"
            icon="settings"
          >
            <svg
              data-icon="settings"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                settings
              </desc>
              <path
                d="M3 1c0-.55-.45-1-1-1S1 .45 1 1v3h2V1zm0 4H1c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm12-4c0-.55-.45-1-1-1s-1 .45-1 1v2h2V1zM9 1c0-.55-.45-1-1-1S7 .45 7 1v6h2V1zM1 15c0 .55.45 1 1 1s1-.45 1-1v-5H1v5zM15 4h-2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-2 11c0 .55.45 1 1 1s1-.45 1-1V9h-2v6zM9 8H7c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-2 7c0 .55.45 1 1 1s1-.45 1-1v-2H7v2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main pageBody"
      data-name="page-body"
    >
      <div
        class="table delegateTable"
      >
        <div
          class="header"
          role="row"
        >
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 30px;"
          >
            
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            DELEGATE.DELEGATENAME
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            TAGSLABEL
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            ACTIVITY
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            DELEGATE.LASTHEARTBEAT
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 20px);"
          >
            CONNECTIVITYSTATUS
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 5%;"
          >
            
          </div>
        </div>
        <div
          class="body"
        >
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30px;"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="service-ecs"
                >
                  <svg
                    height="24"
                    viewBox="0 0 14 14"
                    width="24"
                  >
                    <path
                      d="M.8 13l-.8-.4V1.3L.8.9l3 5.8zM3.1 11l1.1 1.6L9 10.3l-1.1-.2zM2.2 2.9l1.2-1.7L9 3.7l-1 .2z"
                      fill="#9d5025"
                    />
                    <path
                      d="M2.6 1.3L.9.9V13l1.7-.5z"
                      fill="#f58536"
                    />
                    <path
                      d="M1.7 13.5l.9.5 1.7-7.8L2.6 0l-.9.5zM7.9 4L9 3.8l1.1 3.1L9 10.4l-1.1-.2z"
                      fill="#9d5025"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M4.3.5L2.6 0v14l1.7-.5z"
                      />
                      <path
                        d="M10.2 3.9L2.6 2.4V0l7.6 2.3zM10.4 10.1l-7.8 1.6V14l7.8-2.4z"
                      />
                      <path
                        d="M9 12l1.2-.4V2.4L9 2z"
                      />
                    </g>
                    <path
                      d="M14 8.2L10.7 8l-1.1.1 3.3 3z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M9.4 8.2l3.4.2v2.7l-3.4-.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 8.3L9.7 12l1.7-3.6-3.5-.2z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M6.3 8.4l3.4.3v3.4l-3.4-.9zM9.6 5.8l4.4-.1-1.1-2.8-3.3.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.6l5.1-.1-1.7-3.6-3.4.9z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.7l3.4-.4 1.7.2-3.5.3zM14 5.8l-3.3.2-1.1-.1 3.3-.3z"
                      fill="#fbbf93"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M12.8 8.3l1.2-.1v2.5l-1.2.4zM11.4 8.5l-1.7.2v3.4l1.7-.5zM12.8 5.7l1.2.1V3.3l-1.2-.4zM11.4 5.5l-1.7-.2V1.9l1.7.5z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                data-testid=""
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                      delegates.delegateInstances
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
                  >
                    
                  </p>
                </div>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="StyledProps--font StyledProps--main connectivity"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            />
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            >
              3 months ago
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 20px);"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green600"
                  icon="full-circle"
                >
                  <svg
                    data-icon="full-circle"
                    height="6"
                    viewBox="0 0 16 16"
                    width="6"
                  >
                    <desc>
                      full-circle
                    </desc>
                    <path
                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                connected
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: flex-end;"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Listing test actions render data and click delete 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button bp3-disabled bp3-loading Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        data-test="newDelegateButton"
        disabled=""
        id="newDelegateBtn"
        tabindex="-1"
        type="button"
      >
        <div
          class="bp3-spinner bp3-button-spinner"
        >
          <div
            class="bp3-spinner-animation"
          >
            <svg
              height="20"
              stroke-width="16.00"
              viewBox="-3.00 -3.00 106.00 106.00"
              width="20"
            >
              <path
                class="bp3-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp3-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegate.NEW_DELEGATE
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon "
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="delegates.searchDelegateName"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-settings StyledProps--main"
            icon="settings"
          >
            <svg
              data-icon="settings"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                settings
              </desc>
              <path
                d="M3 1c0-.55-.45-1-1-1S1 .45 1 1v3h2V1zm0 4H1c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm12-4c0-.55-.45-1-1-1s-1 .45-1 1v2h2V1zM9 1c0-.55-.45-1-1-1S7 .45 7 1v6h2V1zM1 15c0 .55.45 1 1 1s1-.45 1-1v-5H1v5zM15 4h-2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-2 11c0 .55.45 1 1 1s1-.45 1-1V9h-2v6zM9 8H7c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-2 7c0 .55.45 1 1 1s1-.45 1-1v-2H7v2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main pageBody"
      data-name="page-body"
    >
      <div
        class="table delegateTable"
      >
        <div
          class="header"
          role="row"
        >
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 30px;"
          >
            
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            DELEGATE.DELEGATENAME
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            TAGSLABEL
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            ACTIVITY
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            DELEGATE.LASTHEARTBEAT
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 20px);"
          >
            CONNECTIVITYSTATUS
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 5%;"
          >
            
          </div>
        </div>
        <div
          class="body"
        >
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30px;"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="service-ecs"
                >
                  <svg
                    height="24"
                    viewBox="0 0 14 14"
                    width="24"
                  >
                    <path
                      d="M.8 13l-.8-.4V1.3L.8.9l3 5.8zM3.1 11l1.1 1.6L9 10.3l-1.1-.2zM2.2 2.9l1.2-1.7L9 3.7l-1 .2z"
                      fill="#9d5025"
                    />
                    <path
                      d="M2.6 1.3L.9.9V13l1.7-.5z"
                      fill="#f58536"
                    />
                    <path
                      d="M1.7 13.5l.9.5 1.7-7.8L2.6 0l-.9.5zM7.9 4L9 3.8l1.1 3.1L9 10.4l-1.1-.2z"
                      fill="#9d5025"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M4.3.5L2.6 0v14l1.7-.5z"
                      />
                      <path
                        d="M10.2 3.9L2.6 2.4V0l7.6 2.3zM10.4 10.1l-7.8 1.6V14l7.8-2.4z"
                      />
                      <path
                        d="M9 12l1.2-.4V2.4L9 2z"
                      />
                    </g>
                    <path
                      d="M14 8.2L10.7 8l-1.1.1 3.3 3z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M9.4 8.2l3.4.2v2.7l-3.4-.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 8.3L9.7 12l1.7-3.6-3.5-.2z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M6.3 8.4l3.4.3v3.4l-3.4-.9zM9.6 5.8l4.4-.1-1.1-2.8-3.3.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.6l5.1-.1-1.7-3.6-3.4.9z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.7l3.4-.4 1.7.2-3.5.3zM14 5.8l-3.3.2-1.1-.1 3.3-.3z"
                      fill="#fbbf93"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M12.8 8.3l1.2-.1v2.5l-1.2.4zM11.4 8.5l-1.7.2v3.4l1.7-.5zM12.8 5.7l1.2.1V3.3l-1.2-.4zM11.4 5.5l-1.7-.2V1.9l1.7.5z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                data-testid=""
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                      delegates.delegateInstances
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
                  >
                    
                  </p>
                </div>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="StyledProps--font StyledProps--main connectivity"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            />
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            >
              3 months ago
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 20px);"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green600"
                  icon="full-circle"
                >
                  <svg
                    data-icon="full-circle"
                    height="6"
                    viewBox="0 0 16 16"
                    width="6"
                  >
                    <desc>
                      full-circle
                    </desc>
                    <path
                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                connected
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: flex-end;"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Delegates Listing without tags render data 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        data-test="newDelegateButton"
        id="newDelegateBtn"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegate.NEW_DELEGATE
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon "
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="delegates.searchDelegateName"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-settings StyledProps--main"
            icon="settings"
          >
            <svg
              data-icon="settings"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                settings
              </desc>
              <path
                d="M3 1c0-.55-.45-1-1-1S1 .45 1 1v3h2V1zm0 4H1c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm12-4c0-.55-.45-1-1-1s-1 .45-1 1v2h2V1zM9 1c0-.55-.45-1-1-1S7 .45 7 1v6h2V1zM1 15c0 .55.45 1 1 1s1-.45 1-1v-5H1v5zM15 4h-2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-2 11c0 .55.45 1 1 1s1-.45 1-1V9h-2v6zM9 8H7c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-2 7c0 .55.45 1 1 1s1-.45 1-1v-2H7v2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main pageBody"
      data-name="page-body"
    >
      <div
        class="table delegateTable"
      >
        <div
          class="header"
          role="row"
        >
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 30px;"
          >
            
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            DELEGATE.DELEGATENAME
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            TAGSLABEL
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            ACTIVITY
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            DELEGATE.LASTHEARTBEAT
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 20px);"
          >
            CONNECTIVITYSTATUS
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 5%;"
          >
            
          </div>
        </div>
        <div
          class="body"
        >
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30px;"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="service-ecs"
                >
                  <svg
                    height="24"
                    viewBox="0 0 14 14"
                    width="24"
                  >
                    <path
                      d="M.8 13l-.8-.4V1.3L.8.9l3 5.8zM3.1 11l1.1 1.6L9 10.3l-1.1-.2zM2.2 2.9l1.2-1.7L9 3.7l-1 .2z"
                      fill="#9d5025"
                    />
                    <path
                      d="M2.6 1.3L.9.9V13l1.7-.5z"
                      fill="#f58536"
                    />
                    <path
                      d="M1.7 13.5l.9.5 1.7-7.8L2.6 0l-.9.5zM7.9 4L9 3.8l1.1 3.1L9 10.4l-1.1-.2z"
                      fill="#9d5025"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M4.3.5L2.6 0v14l1.7-.5z"
                      />
                      <path
                        d="M10.2 3.9L2.6 2.4V0l7.6 2.3zM10.4 10.1l-7.8 1.6V14l7.8-2.4z"
                      />
                      <path
                        d="M9 12l1.2-.4V2.4L9 2z"
                      />
                    </g>
                    <path
                      d="M14 8.2L10.7 8l-1.1.1 3.3 3z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M9.4 8.2l3.4.2v2.7l-3.4-.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 8.3L9.7 12l1.7-3.6-3.5-.2z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M6.3 8.4l3.4.3v3.4l-3.4-.9zM9.6 5.8l4.4-.1-1.1-2.8-3.3.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.6l5.1-.1-1.7-3.6-3.4.9z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.7l3.4-.4 1.7.2-3.5.3zM14 5.8l-3.3.2-1.1-.1 3.3-.3z"
                      fill="#fbbf93"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M12.8 8.3l1.2-.1v2.5l-1.2.4zM11.4 8.5l-1.7.2v3.4l1.7-.5zM12.8 5.7l1.2.1V3.3l-1.2-.4zM11.4 5.5l-1.7-.2V1.9l1.7.5z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                data-testid=""
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                      delegates.delegateInstances
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
                  >
                    
                  </p>
                </div>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="StyledProps--font StyledProps--main connectivity"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            />
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            >
              3 months ago
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 20px);"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green600"
                  icon="full-circle"
                >
                  <svg
                    data-icon="full-circle"
                    height="6"
                    viewBox="0 0 16 16"
                    width="6"
                  >
                    <desc>
                      full-circle
                    </desc>
                    <path
                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                connected
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: flex-end;"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Feature flag enabled render delegates list and check for activity column 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main"
  >
    <div
      class="Layout--horizontal StyledProps--main header"
    >
      <button
        class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
        data-test="newDelegateButton"
        id="newDelegateBtn"
        type="button"
      >
        <span
          class="bp3-icon bp3-icon-plus StyledProps--main StyledProps--padding-right-xsmall"
          icon="plus"
        >
          <svg
            data-icon="plus"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              plus
            </desc>
            <path
              d="M13 7H9V3c0-.55-.45-1-1-1s-1 .45-1 1v4H3c-.55 0-1 .45-1 1s.45 1 1 1h4v4c0 .55.45 1 1 1s1-.45 1-1V9h4c.55 0 1-.45 1-1s-.45-1-1-1z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="bp3-button-text"
        >
          delegate.NEW_DELEGATE
        </span>
      </button>
      <span
        style="flex-grow: 1;"
      />
      <div
        class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main"
      >
        <div
          class="bp3-input-group ui-search-box ExpandingSearchInput--main search "
          data-name=""
        >
          <span
            class="bp3-icon bp3-icon-search StyledProps--main ExpandingSearchInput--icon "
            icon="search"
          >
            <svg
              data-icon="search"
              height="14"
              viewBox="0 0 16 16"
              width="14"
            >
              <desc>
                search
              </desc>
              <path
                d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
          <input
            class="bp3-input "
            dir="auto"
            placeholder="delegates.searchDelegateName"
            style="padding-right: 0px;"
            type="search"
            value=""
          />
        </div>
        <button
          class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-icon bp3-icon-settings StyledProps--main"
            icon="settings"
          >
            <svg
              data-icon="settings"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <desc>
                settings
              </desc>
              <path
                d="M3 1c0-.55-.45-1-1-1S1 .45 1 1v3h2V1zm0 4H1c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V6c0-.55-.45-1-1-1zm12-4c0-.55-.45-1-1-1s-1 .45-1 1v2h2V1zM9 1c0-.55-.45-1-1-1S7 .45 7 1v6h2V1zM1 15c0 .55.45 1 1 1s1-.45 1-1v-5H1v5zM15 4h-2c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V5c0-.55-.45-1-1-1zm-2 11c0 .55.45 1 1 1s1-.45 1-1V9h-2v6zM9 8H7c-.55 0-1 .45-1 1v2c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V9c0-.55-.45-1-1-1zm-2 7c0 .55.45 1 1 1s1-.45 1-1v-2H7v2z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
    <div
      class="StyledProps--font StyledProps--main pageBody"
      data-name="page-body"
    >
      <div
        class="table delegateTable"
      >
        <div
          class="header"
          role="row"
        >
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 30px;"
          >
            
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            DELEGATE.DELEGATENAME
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 25%;"
          >
            TAGSLABEL
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            ACTIVITY
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 10px);"
          >
            DELEGATE.LASTHEARTBEAT
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: calc(15% - 20px);"
          >
            CONNECTIVITYSTATUS
          </div>
          <div
            class="cell"
            colspan="1"
            role="columnheader"
            style="width: 5%;"
          >
            
          </div>
        </div>
        <div
          class="body"
        >
          <div
            class="row card clickable"
            role="row"
          >
            <div
              class="cell"
              role="cell"
              style="width: 30px;"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--padding-right-xsmall"
                  data-icon="service-ecs"
                >
                  <svg
                    height="24"
                    viewBox="0 0 14 14"
                    width="24"
                  >
                    <path
                      d="M.8 13l-.8-.4V1.3L.8.9l3 5.8zM3.1 11l1.1 1.6L9 10.3l-1.1-.2zM2.2 2.9l1.2-1.7L9 3.7l-1 .2z"
                      fill="#9d5025"
                    />
                    <path
                      d="M2.6 1.3L.9.9V13l1.7-.5z"
                      fill="#f58536"
                    />
                    <path
                      d="M1.7 13.5l.9.5 1.7-7.8L2.6 0l-.9.5zM7.9 4L9 3.8l1.1 3.1L9 10.4l-1.1-.2z"
                      fill="#9d5025"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M4.3.5L2.6 0v14l1.7-.5z"
                      />
                      <path
                        d="M10.2 3.9L2.6 2.4V0l7.6 2.3zM10.4 10.1l-7.8 1.6V14l7.8-2.4z"
                      />
                      <path
                        d="M9 12l1.2-.4V2.4L9 2z"
                      />
                    </g>
                    <path
                      d="M14 8.2L10.7 8l-1.1.1 3.3 3z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M9.4 8.2l3.4.2v2.7l-3.4-.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 8.3L9.7 12l1.7-3.6-3.5-.2z"
                      fill="#6b3a19"
                    />
                    <path
                      d="M6.3 8.4l3.4.3v3.4l-3.4-.9zM9.6 5.8l4.4-.1-1.1-2.8-3.3.6z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.6l5.1-.1-1.7-3.6-3.4.9z"
                      fill="#9d5025"
                    />
                    <path
                      d="M6.3 5.7l3.4-.4 1.7.2-3.5.3zM14 5.8l-3.3.2-1.1-.1 3.3-.3z"
                      fill="#fbbf93"
                    />
                    <g
                      fill="#f58536"
                    >
                      <path
                        d="M12.8 8.3l1.2-.1v2.5l-1.2.4zM11.4 8.5l-1.7.2v3.4l1.7-.5zM12.8 5.7l1.2.1V3.3l-1.2-.4zM11.4 5.5l-1.7-.2V1.9l1.7.5z"
                      />
                    </g>
                  </svg>
                </span>
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                data-testid=""
              >
                <div
                  class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
                >
                  <div
                    class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
                    data-testid="delegate-1"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-black"
                    >
                      delegate-1
                      delegates.delegateInstances
                    </p>
                  </div>
                  <p
                    class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-grey400"
                  >
                    
                  </p>
                </div>
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 25%;"
            >
              <div
                class="StyledProps--font StyledProps--main connectivity"
              >
                <div
                  class="StyledProps--font StyledProps--main"
                  style="display: inline-flex; flex-wrap: wrap;"
                />
              </div>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            />
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 10px);"
            >
              3 months ago
            </div>
            <div
              class="cell"
              role="cell"
              style="width: calc(15% - 20px);"
            >
              <p
                class="StyledProps--font StyledProps--main"
                style="display: flex; align-items: center;"
              >
                <span
                  class="bp3-icon bp3-icon-full-circle StyledProps--main StyledProps--padding-right-xsmall StyledProps--color StyledProps--color-green600"
                  icon="full-circle"
                >
                  <svg
                    data-icon="full-circle"
                    height="6"
                    viewBox="0 0 16 16"
                    width="6"
                  >
                    <desc>
                      full-circle
                    </desc>
                    <path
                      d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                connected
              </p>
            </div>
            <div
              class="cell"
              role="cell"
              style="width: 5%;"
            >
              <div
                class="Layout--horizontal StyledProps--main"
                style="justify-content: flex-end;"
              >
                <span
                  class="bp3-popover-wrapper bp3-dark"
                >
                  <span
                    class="bp3-popover-target"
                  >
                    <button
                      class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow"
                      type="button"
                    >
                      <span
                        class="bp3-icon StyledProps--main"
                        data-icon="Options"
                      >
                        <svg
                          fill="none"
                          height="16"
                          viewBox="0 0 4 16"
                          width="16"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M2 12.5a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zm2-12a1 1 0 100 2 1 1 0 000-2zm-2 1a2 2 0 114 0 2 2 0 01-4 0zM2 7a1 1 0 100 2 1 1 0 000-2zM0 8a2 2 0 114 0 2 2 0 01-4 0z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </button>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
